--- a/ch04_Docker_Image/pyproject.toml
+++ b/ch04_Docker_Image/pyproject.toml
@@ -2,13 +2,22 @@
 name = "demo-app"
 version = "0.1.0"
 description = "Minimal FastAPI demo for ch04 Docker image"
-authors = ["you <you@example.com>"]
-packages = [ { include = "api" } ]
+authors = ["Jim <caramel2516@naver.com>"]
+readme = "README.md"
+packages = [ { include = "demo_app" } ]
 
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.95.0"
 uvicorn = { extras = ["standard"], version = "^0.22.0" }
+sqlalchemy = "^2.0.3"
+pymysql = "^1.0.2"
+aiomysql = "^0.1.1"
+
+[tool.poetry.group.dev.dependencies]
+pytest-asyncio = "^0.20.3"
+aiosqlite = "^0.18.0"
+httpx = "^0.23.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
